--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -48,7 +48,6 @@ h1,h2,h3,h4,h5,h6 {
 
 h1, .title {
   font-size: $base-spacing * 2.2;
-  line-height: $base-line-height * 1.1;
   font-weight: 300;
 }
 .title {
